testdata/invalid/internal/saga/bad_orchestrator.go
package saga

import _ "github.com/kimtaeyun/testproject-dc-invalid/internal/domain/user/core/model"
